fixed portfolio section of overlapping section

--- a/assets/css/modules/_work.sass
+++ b/assets/css/modules/_work.sass
@@ -19,160 +19,162 @@
   &--lockup
     position: relative
 
-    .slider
-      position: relative
-      display: flex
-      width: 80%
-      margin: 0 auto
-      padding: 0
-      list-style: none
+    .slider {
+  position: relative;
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  width: 90%;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  gap: 20px;
 
-      &--item
-        position: absolute
-        display: none
-        text-align: center
+  &--item {
+    flex: 0 0 auto;
+    scroll-snap-align: center;
+    width: 300px;
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-        a
-          text-decoration: none
-          color: #858585
+    a {
+      text-decoration: none;
+      color: #858585;
+    }
 
-        &-title
-          margin-top: 10px
-          font-size: 12px
-          font-weight: 700
-          text-transform: uppercase
+    &-title {
+      margin-top: 10px;
+      font-size: 14px;
+      font-weight: 700;
+      text-transform: uppercase;
+    }
 
-        &-description
-          display: none
-          max-width: 250px
-          margin: 0 auto
+    &-description {
+      max-width: 250px;
+      margin: 5px auto 0;
+      font-size: 13px;
+      color: #ccc;
+      display: block;
+    }
 
-        &-image
-          width: 150px
-          height: 150px
-          margin: 0 auto
-          border-radius: 50%
-          overflow: hidden
+    &-image {
+      width: 150px;
+      height: 150px;
+      border-radius: 10px;
+      overflow: hidden;
 
-          img
-            width: 100%
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
 
-        &-left
-          top: 50%
-          left: 0
-          transform: translateY(-50%)
-          display: block
+    &-center {
+      .slider--item-title {
+        font-size: 16px;
+        margin-top: 25px;
+        color: #fff;
+      }
 
-        &-right
-          top: 50%
-          right: 0
-          transform: translateY(-50%)
-          display: block
+      .slider--item-description {
+        display: block;
+        color: #aaa;
+      }
 
-        &-center
-          position: relative
-          top: 30px
-          left: 50%
-          transform: translateX(-50%)
-          display: block
+      .slider--item-image {
+        width: 300px;
+        height: 300px;
+      }
+    }
+  }
+}
 
-          a
-            color: $white
+.slider--next,
+.slider--prev {
+  position: absolute;
+  top: 160px;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
+  background-color: #444; // Replace with $muted-gray if defined
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 10;
 
-          .slider--item-title
-            margin-top: 25px
-            font-size: 16px
+  svg {
+    width: 20px;
+    fill: #fff;
+  }
+}
 
-          .slider--item-description
-            display: block
+.slider--next {
+  right: 0;
+}
 
-          .slider--item-image
-            width: 300px
-            height: 300px
+.slider--prev {
+  left: 0;
+}
 
-    .slider--next,
-    .slider--prev
-      position: absolute
-      top: 160px
-      display: flex
-      width: 50px
-      height: 50px
-      align-items: center
-      justify-content: center
-      background-color: $muted-gray
-      border-radius: 50%
-      cursor: pointer
+/* Responsive Media Queries */
+@media (max-width: 900px) {
+  .slider--item {
+    &-image {
+      width: 120px;
+      height: 120px;
+    }
 
-      svg
-        width: 20px
-        fill: $white
+    &-center {
+      .slider--item-image {
+        width: 240px;
+        height: 240px;
+      }
+    }
+  }
 
-    .slider--next
-      right: 0
+  .slider--next,
+  .slider--prev {
+    top: 130px;
+  }
+}
 
-    .slider--prev
-      left: 0
+@media (max-width: 767px) {
+  .slider {
+    width: 75%;
+  }
 
-@media (max-width: 900px)
+  .slider--item {
+    &-image {
+      width: 90px;
+      height: 90px;
+    }
 
-  .work
+    &-center {
+      .slider--item-image {
+        width: 190px;
+        height: 190px;
+      }
+    }
+  }
 
-    &--lockup
+  .slider--next,
+  .slider--prev {
+    top: 105px;
+  }
+}
 
-      .slider
+@media (max-width: 600px) {
+  .slider {
+    width: auto;
+  }
 
-        &--item
-
-          &-image
-            width: 120px
-            height: 120px
-
-          &-center
-
-            .slider--item-image
-              width: 240px
-              height: 240px
-
-      .slider--next,
-      .slider--prev
-        top: 130px
-
-@media (max-width: 767px)
-
-  .work
-
-    &--lockup
-
-      .slider
-        width: 75%
-
-        &--item
-
-          &-image
-            width: 90px
-            height: 90px
-
-          &-center
-
-            .slider--item-image
-              width: 190px
-              height: 190px
-
-      .slider--next,
-      .slider--prev
-        top: 105px
-
-@media (max-width: 600px)
-
-  .work
-
-    &--lockup
-
-      .slider
-        width: auto
-
-        &--item
-
-          &-left,
-          &-right
-            display: none
+  .slider--next,
+  .slider--prev {
+    display: none;
+  }
+}
